# librapam

./: .ccls  CMakeLists.txt  License.txt  README.md
etc/pam.d/: librapam
example/: simple_login.c
include/: librapam.h
src/: librapam.c
